fix bug en insercion de codigo meta pixel

--- a/index.html
+++ b/index.html
@@ -23,20 +23,6 @@
       content="Mirá todos los productos que tenemos para vos. Seleccionó los que te interesen y solicitanos tu presupuesto al instante."
     />
     <title>Productos promocionales - Central Norte</title>
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-WM45G4RX"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
     <!-- Meta Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
@@ -65,6 +51,21 @@
       fbq('init', '837066084969911')
       fbq('track', 'PageView')
     </script>
+    <!-- End Meta Pixel Code -->
+  </head>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WM45G4RX"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Meta Pixel Code -->
     <noscript
       ><img
         height="1"
@@ -72,6 +73,8 @@
         style="display: none"
         src="https://www.facebook.com/tr?id=837066084969911&ev=PageView&noscript=1"
     /></noscript>
-    <!-- End Meta Pixel Code -->
+    <!-- Meta Pixel Code end -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
